# F-M-Alg

./: .gitignore  CMakeLists.txt  Papers.docx  README.md  res.xlsx  scr.py
include/: GainContainer.h  Graph.h  Partitionment.h
src/: FM.cpp  GainContainer.cpp  Graph.cpp  Partitionment.cpp  main.cpp  test.cc
src/include/: Graph.h  Partitionment.h
src/lib/: GainContainer.cpp  GainContainer.h  Graph.cpp  Partitionment.cpp
