cmake_minimum_required(VERSION 3.10)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set(project fm)
project(${project})
file(GLOB_RECURSE SRC_FILES src/*.cpp)
add_executable(${project} ${SRC_FILES})
target_include_directories(${project} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(${project} PRIVATE -O3)
set(OUT_DIR ${CMAKE_BINARY_DIR}/build/)
set_target_properties(${project} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUT_DIR})